# querit-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: build-release.yml  ci.yml  publish.yml
examples/: ai_search_summary.py  ai_search_tool_use.py  test_search.py
querit/: __init__.py  client.py  errors.py  version.py
querit/models/: request.py  response.py
querit/utils/: __init__.py  enums.py  http.py
