[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "querit"
version = "0.1.2"
description = "Querit Python SDK"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests"]
license = { file = "LICENSE" }
keywords = ["search", "sdk", "querit", "querit-python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["querit*"]
